--- a/index.html
+++ b/index.html
@@ -4,11 +4,49 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Psychic Game</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <title>Word-Guess-Game</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-  
+  <div class="container">
+    <div class="jumbotron">
+      <h1>WORD GUESS GAME</h1>
+      <p>Guess the student from class!</p>
+    </div>
+
+    <div class="card mb-3">
+      <div class="card-header">
+        <h3>Word to Guess</h3>
+      </div>
+      <div class="card-body">
+        <h2>--------------------</h2>
+      </div>
+    </div>
+    
+    <div class="card mb-3">
+      <div class="card-body">
+        Wrong Guesses: <span id="wrongGuesses"></span>
+      </div>
+    </div>
+
+    <div class="card mb-3">
+      <div class="card-body">
+        Guesses Left: <span id="numGuesses">9</span>
+      </div>
+    </div>
+
+    <div class="card mb-3">
+      <div class="card-body">
+        Win Counter: <span id="winCounter">0</span>
+      </div>
+    </div>
+
+    <div class="card mb-3">
+      <div class="card-body">
+        Loss Counter: <span id="lossCounter">0</span>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
