--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>Word to Guess</h3>
       </div>
       <div class="card-body">
-        <h2>--------------------</h2>
+        <h2 id="wordToGuess">_ _ _ _ _ _ _</h2>
       </div>
     </div>
     
