--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron bg-dark text-white">
       <h1>WORD GUESS GAME</h1>
-      <p>Guess the student from class!</p>
+      <p>Guess what color I am thinking of???</p>
     </div>
 
     <div class="card mb-3">
@@ -23,25 +23,25 @@
       </div>
     </div>
     
-    <div class="card mb-3">
+    <div class="card mb-3 bg-info">
       <div class="card-body">
         Wrong Guesses: <span id="wrongGuesses"></span>
       </div>
     </div>
 
-    <div class="card mb-3">
+    <div class="card mb-3 bg-warning">
       <div class="card-body">
         Guesses Left: <span id="numGuesses">9</span>
       </div>
     </div>
 
-    <div class="card mb-3">
+    <div class="card mb-3 bg-success">
       <div class="card-body">
         Win Counter: <span id="winCounter">0</span>
       </div>
     </div>
 
-    <div class="card mb-3">
+    <div class="card mb-3 bg-danger">
       <div class="card-body">
         Loss Counter: <span id="lossCounter">0</span>
       </div>
